--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Api-Client</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+   <!--     <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li class="active dropdown"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Reports</a></li>
@@ -93,9 +93,10 @@
                 <li><a href="">Another nav item</a></li>
             </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">-->
+        <div class="col-sm-6 col-sm-offset-6 col-md-12 col-md-offset-0 main">
             <h1 class="page-header">Dashboard</h1>
-            <div class="table-responsive" style="min-height: 100%">
+            <div class="table-responsive" style="min-height: 400px">
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -122,10 +123,10 @@
                                     Aktion <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#"><i class="glyphicon glyphicon-eye-open"></i> Details</a></li>
-                                    <li><a href="#"><i class="glyphicon glyphicon-pencil"></i> Bearbeiten</a></li>
+                                    <li><a href="#details"><i class="glyphicon glyphicon-eye-open"></i> Details</a></li>
+                                    <li><a href="#edit"><i class="glyphicon glyphicon-pencil"></i> Bearbeiten</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#"><i class="glyphicon glyphicon-remove"></i> löschen</a></li>
+                                    <li><a href="#delete"><i class="glyphicon glyphicon-remove"></i> löschen</a></li>
                                 </ul>
                             </div>
                         </td>
@@ -143,10 +144,10 @@
                                     Aktion <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#"><i class="glyphicon glyphicon-eye-open"></i> Details</a></li>
-                                    <li><a href="#"><i class="glyphicon glyphicon-pencil"></i> Bearbeiten</a></li>
+                                    <li><a href="#details"><i class="glyphicon glyphicon-eye-open"></i> Details</a></li>
+                                    <li><a href="#edit"><i class="glyphicon glyphicon-pencil"></i> Bearbeiten</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#"><i class="glyphicon glyphicon-remove"></i> löschen</a></li>
+                                    <li><a href="#delete"><i class="glyphicon glyphicon-remove"></i> löschen</a></li>
                                 </ul>
                             </div>
                         </td>
